get URIs from well-known endpoint